Added photos/compressed images/fixed font

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" type="image/jpg" href="%PUBLIC_URL%/favicon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Description"
+      content="Hair salon based in Greenville, South Carolina. We are not your average salon. We are a one-stop shop for hair and beauty!"
+    />
+    <meta
+      name="Keywords"
+      content="hair, salon, hair salon, hair salon in greenville, facials, beauty"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.jpeg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
